--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "num-guess",
     "slug": "num-guess",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
